enumeratie Geslacht incl. unit-tests toegevoegd