@@ -1,11 +1,13 @@
 package com.befrank.casedeveloperjava;
 
+import com.befrank.casedeveloperjava.model.Deelnemer;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/case")
@@ -18,6 +20,6 @@ public class Controller {
         return repository.findAll()
                 .stream()
                 .map(Deelnemer::getId)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
